# gpvdm_core

./: Makefile.am  README.md  configure.ac
cluster/: cal_path.c  clean.c  command.c  debug.c  get_data.c  head.c  inp.c  ip.c  jobs.c  jobs_save_load.c  kill_pid.c  killall.c  load.c  log.c  main.c  message.c  node.c  nodes.c  packet.c  poweroff.c  quit.c  register.c  run_jobs.c  rx_file.c  rx_loop.c  sleep.c  state.c  sync.c  tx_file.c  util.c
device_lib/: IS_IMPS.gpvdm  a-silicon.gpvdm  afm_ray.gpvdm  bilayer.gpvdm  carsten.gpvdm  chenwang.gpvdm  chenwang0.gpvdm  chenwang1.gpvdm  chenwang2.gpvdm  cigs.gpvdm  default.gpvdm  elizabeth.gpvdm  filter.gpvdm  fitting_example.gpvdm  high_voltage_ofet.gpvdm  kat.gpvdm  laser_anealing.gpvdm  micro_lense_demo.gpvdm  ofet.gpvdm  oled.gpvdm  organic_inverted.gpvdm  p3htpcbm.gpvdm  perovskite.gpvdm  ray_trace_demo.gpvdm  silicon.gpvdm  simple_diode.gpvdm  tandem.gpvdm  tandem_si_perovskite.gpvdm  will.gpvdm
include/: advmath.h  buffer.h  cache.h  cache_struct.h  cal_path.h  checksum.h  circuit.h  circuit_struct.h  code_ctrl.h  color.h  colors.h  complex_solver.h  component.h  component_fun.h  config.h  const.h  contact_struct.h  contacts.h  contacts_vti_store.h  dat_file.h  dat_file_struct.h  data2d.h  device.h  device_fun.h  dim.h  dll_export.h  dos.h  dos_an.h  dos_struct.h  dump.h  dump_ctrl.h  dynamic_store.h  epitaxy.h  epitaxy_struct.h  exp.h  fdtd.h  fit.h  fit_sin.h  frame.h  functions.h  (+62 more)
lib/: Makefile.am  cal_path.c  complex_solver.c  complex_solver_interface.c  device.c  epitaxy.c  epitaxy_materials.c  errors.c  exit.c  gui_hooks.c  hard_limit.c  initial.c  inp.c  list.c  log.c  newton_interface.c  newton_update.c  patch.c  plot.c  remesh.c  solver_interface.c  startstop.c  thermal.c  timer.c  util.c  util_str.c  util_units.c  zip_buffer.c
libbasicmath/: Makefile.am  advmath.c  basic_math.c  object.c  objects.c  rand.c  ray_obj_tools.c  triangle.c  triangle_io.c  triangles.c  triangles_min_max.c  triangles_roughness.c  vec.c  vec_list.c
libcolor/: cie.c  wavelength_to_rgb.c
libcontacts/: Makefile.am  contacts.c  contacts_load.c
libdevice/: Makefile.am  add_shape.c  build_scene.c  device.c  device_free.c  device_heat.c  device_malloc.c  device_world_stats.c  epitaxy.c  epitaxy_heat.c  epitaxy_optical.c  epitaxy_shapes.c  scene_dump.c
libdos/: Makefile.am  checksum.c  dos.c  dos_an.c  dos_read_free.c  gendosfdgaus.c  hash.c  hash_dir.c  md5.c
libdump/: Makefile.am  buffer.c  cache.c  dat_file.c  dat_file_load.c  dump.c  dump_1d_slice.c  dump_config.c  dump_contacts.c  dump_ctrl.c  dump_dynamic.c  dump_energy_slice.c  dump_map.c  dump_snapshot_utils.c  dump_zxy.c  dump_zxy_charge.c  dynamic.c  dynamic_append.c  dynamic_dump_j.c  dynamic_free.c  dynamic_init.c
libdumpctrl/: dump_file.c
libemission/: Makefile.am  emission.c  pl.c  probe.c
libi/: Makefile.am  data2d.c  i.c  i_math.c  i_mem.c  math_xy_calculus.c  math_xy_load_save.c  math_xy_peak.c
liblight/: Makefile.am  light_config.c  light_dump.c  light_dump_verbose_1d.c  light_dump_verbose_2d.c  light_init.c  light_interface.c  light_laser.c  light_materials.c  light_memory.c  light_mesh.c  light_solve.c  light_utils.c
libmeasure/: exp.c  measure.c
libmemory/: Makefile.am  heat_zxy_long_double.c  heat_zxy_p_object.c  light_l_long_double.c  light_y_long_double.c  light_zxy_long_double.c  light_zxy_p_object.c  light_zxyl_long_double.c  light_zxyl_long_double_complex.c  matrix.c  memory.c  memory_basic.c  zx_epitaxy_int.c  zx_long_double.c  zxy_int.c  zxy_long_double.c  zxy_long_double_complex.c  zy_long_double.c
libmesh/: Makefile.am  dim.c  dim_heat.c  dim_light.c  mesh.c  mesh_obj.c  remesh.c  time.c
libnewtontricks/: Makefile.am  externalv.c  hash_dir.c  load_save.c  misc.c  newton_state_complex.c  newton_voc.c  perovskite.c  state_vector.c
libray/: Makefile.am  build.c  ray.c  ray_dump.c  ray_intersect.c  ray_mat.c  ray_shapes.c  ray_stats.c  search_obj.c  solve.c
librpn/: edge.c  eval.c  function.c  opp.c  rpn.c  stack.c  vars.c
libserver/: server.c
libshape/: shape.c
libsimplex/: simplex_contract.c  simplex_dump.c  simplex_expand.c  simplex_init.c  (+4 more)
plugins/jv/: Makefile.am  jv.c  jv.h  plugin.c
plugins/superlu/: Makefile.am  lib.c  solver.c
src/: Makefile.am  anal.c  config.c  frame.c  initial.c  main.c  mesh.c  pos.c  run_electrical_dll.c  sim.c  sim_find_n0.c  sim_run.c
(+33 files in other folders)
